--- a/exercicio-03/index.html
+++ b/exercicio-03/index.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8" />
+    <title>Exercício 03</title>
+</head>
+<body>
+    <h1>Lista de Exercícios CJRM - 03</h1>
+    <script src="./app.js"></script>
+</body>
+</html>
