--- a/exercicio-18/index.html
+++ b/exercicio-18/index.html
@@ -20,7 +20,8 @@
           placeholder="Cadastre seu nome de usuário"
           id="username"
           autofocus
-        >
+          autocomplete="off"
+        />
 
         <button class="button">Enviar</button>
       </fieldset>
